fix header/loading screen z-index

--- a/css/main.css
+++ b/css/main.css
@@ -309,7 +309,7 @@ textarea {
 
 #infoPanel-header {
   display: flex;
-  z-index: 9999;
+  z-index: 9990;
   justify-content: center;
   align-items: center;
   position: sticky;
